# Rust

Rust/frontend/public/: index.html
Rust/frontend/src/: authcontext.jsx
Rust/frontend/src/pages/: Forgotpassword.jsx  Profile.jsx  Register.jsx
backend/: .env
backend/server/: .env  Cargo.toml
backend/server/migrations/2025-10-31-044843-0000_create_users/: up.sql
backend/server/migrations/2025-11-02-092802-0000_create_password_reset_tokens/: up.sql
backend/server/migrations/2025-11-04-091147-0000_follows/: down.sql  up.sql
backend/server/migrations/2025-11-05-103006-0000_user-posts/: down.sql  up.sql
backend/server/src/: api_docs.rs  db.rs  main.rs  schema.rs
backend/server/src/handlers/: mod.rs  post_handler.rs  user_handler.rs
backend/server/src/middleware/: auth.rs
backend/server/src/models/: mod.rs  post.rs  user.rs
backend/server/src/routes/: mod.rs  user_route.rs
backend/server/src/utils/: file_utils.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  Globaltoaster.jsx  main.jsx
frontend/src/pages/: Forgotpassword.jsx  Home.jsx  Login.jsx  Post.jsx  Profile.jsx  Register.jsx  Resetpassword.jsx  videofeed.jsx
