[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.4"
actix-rt = "2"
actix-cors = "0.6"
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
bcrypt = "0.14"
validator = { version = "0.16", features = ["derive"] }
sanitize-filename = "0.5"
log = "0.4"
env_logger = "0.10"
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }


[build-dependencies]
diesel_migrations = "2.2"
