[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-service = "2"
actix-multipart = "0.4"
actix-rt = "2"
actix-cors = "0.6"
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
bcrypt = "0.14"
validator = { version = "0.16", features = ["derive"] }
sanitize-filename = "0.5"
log = "0.4"
axum = "0.7"  
env_logger = "0.10"
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }
lettre = "0.11.19"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
actix-files = "0.6.8"
utoipa = "4.0"
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }


[build-dependencies]
diesel_migrations = "2.2"
